--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(GameboyPlus)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(GameboyPlus main.cpp CPU.cpp CPU.h Memory.cpp Memory.h OpCode.cpp Emulator.cpp Emulator.h Instructions.cpp)
+add_executable(GameboyPlus System/main.cpp System/Core/CPU.cpp System/Core/CPU.h System/Core/Memory.cpp System/Core/Memory.h System/Core/OpCode.cpp System/Emulator/Emulator.cpp System/Emulator/Emulator.h System/Core/Instructions.cpp)
